recursion.cons.occurrences.Occurrences.scala.error
Erreur de compilation :
Occurrences:4: error: not found: value occurences
  if(l.head == v) return 1 + occurences(l.tail, v);
                             ^Occurrences:5: error: not found: value occurences
  else return occurences(l.tail, v);
              ^